--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
   },
   "dependencies": {
     "react": "15.2.1",
-    "react-native": "0.31.0",
-    "react-native-windows": "^0.31.3",
-    "uuid": "^2.0.2"
-  },
-  "devDependencies": {
-    "rnpm-plugin-windows": "^0.2.0"
+    "react-native": "0.31.0"
   }
 }
